<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:support="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.calculator.MainActivity">

    <item
        android:id="@+id/menu_calculate"
        android:icon="@drawable/ic_equals"
        android:title="@string/action_calculate"
        support:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_clear_all"
        android:icon="@drawable/ic_clear_white"
        android:title="@string/action_clear_all"
        support:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/action_leading_zero"
        android:checkable="true"
        android:checked="true"
        android:title="@string/show_leading_zero"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_info"
        android:icon="@drawable/ic_info_white"
        android:title="@string/action_about"
        support:showAsAction="never"/>
</menu>
